# weather_mow

./: .coverage  .gitignore  AGENTS.md  ALGORITHMUS.md  DEVELOPMENT.md  FUNKTIONSWEISE.md  LICENSE  README.md  backtest_smart_mow.py  hacs.json  pyproject.toml
.github/workflows/: ci.yml  daily_issue_check.yml
custom_components/: config_entry-weather_mow-01KRN8BYXAFT82X0NRCXH9CQRZ-2.json  config_entry-weather_mow-01KRN8BYXAFT82X0NRCXH9CQRZ.json
custom_components/weather_mow/: __init__.py  binary_sensor.py  button.py  charging.py  config_flow.py  const.py  coordinator.py  date.py  diagnostics.py  drying.py  growth.py  manifest.json  number.py  rain_input.py  sensor.py  strings.json  switch.py  time.py  wetness.py
custom_components/weather_mow/translations/: de.json  en.json
docs/: daily_issue_report.md  release-notes-v0.4.0a1.md  release-notes-v0.4.0b1.md  release-notes-v0.4.0b2.md  release-notes-v0.4.0b3.md  v0.4-concept.md
docs/superpowers/plans/: 2026-06-03-v0.4.2-ladezeit-maehstatus-uebersetzung.md
docs/superpowers/specs/: 2026-06-03-v0.4.2-ladezeit-maehstatus-uebersetzung-design.md
simulator/: ha_stubs.py  mower_sim.py  plot.py  run_simulation.py  weather_loader.py
tests/: conftest.py  test_button.py  test_charging.py  test_config_flow.py  test_coordinator_advanced.py  test_coordinator_basic.py  test_coordinator_branches.py  test_coordinator_decision.py  test_coordinator_final.py  test_coordinator_forecast.py  test_coordinator_helpers.py  test_coordinator_init.py  test_coordinator_listeners.py  test_coordinator_recorder.py  test_coordinator_storage.py  test_coordinator_update_integration.py  test_coordinator_weather_service.py  test_coordinator_wetness.py  test_date_time.py  test_diagnostics.py  test_drying.py  test_growth.py  test_init.py  test_number.py  test_platform_setup.py  test_rain_input.py  test_sensor_binary_sensor.py  test_switch.py  test_translations_complete.py  test_wetness.py  test_wetness_constants.py
